VQ-340-2: Bug fixes & CSS updates

--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -28,3 +28,11 @@
   }
 }
 
+.input-group-text span {
+  background: #fff;
+}
+
+.input-group-text:hover, .input-group-text span:hover {
+  background: #00529b;
+}
+
