--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -20,9 +20,9 @@
         <div class="dropdown profile" style="padding: 0 1rem">
           <img src="../../../../../assets/images/jane-doe.png" alt="john doe">
           <div class="dropdown-content" style="font-size: 12px; min-width: 80px;">
-            <a href="#">Profile</a>
-            <a href="#">Settings</a>
-            <a href="#">Logout</a>
+            <a href="/home/administration">Profile</a>
+            <!--<a href="#">Settings</a>-->
+            <a href="/" (click)="logout()">Logout</a>
           </div>
         </div>
 
