--- a/src/app/features/gis/components/setups/components/general-parameter/system-parameter/system-parameter.component.html
+++ b/src/app/features/gis/components/setups/components/general-parameter/system-parameter/system-parameter.component.html
@@ -176,7 +176,7 @@
 <!-- Delete Parameter Modal -->
 <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content border-radius-none">
       <div class="modal-body">
         <h5 class="text-center text-danger">Confirm Delete!</h5>
         <p class="text-primary text-center">{{ this.selectedParam?.name }}</p>
