--- a/src/app/features/base/components/dashboard/calendar/calendar.component.css
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.css
@@ -21,11 +21,11 @@
   color: #000;
   margin: 5px auto;
   padding: 10px;
-  border-radius: 5px
 }
 
 ::ng-deep .calendar-input .p-inputtext {
   border: none !important;
+  color: #fff;
 }
 
 ::ng-deep .calendar-input .p-button {
@@ -41,21 +41,20 @@
 
 
 ::ng-deep .card.calendar {
-  font-size: 10px;
+  font-size: 0.9rem;
   border: 0;
   border-radius: 0;
-  height: 10%;
+  /*height: 10%;*/
 }
 
 .form-select {
   border-radius: 0;
-  font-size: 13px;
+  font-size: 1rem;
 }
 
 
 .text-end {
   cursor: pointer;
-
 
 }
 .text-end-view {
@@ -66,7 +65,6 @@
   padding: 0.6rem 1.3rem;
   font-size: 12px;
 }
-
 
 .text-end-view:hover {
   border: 1px solid var(--primary-color);
