--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="base-content-section dashboard">
-  <h5 class="section-title">{{'lang.my_dashbaord' | translate}}</h5>
+  <h5 class="section-title" routerLink="/home/reports/dashboard">{{'lang.my_dashbaord' | translate}}</h5>
   <div class="row">
       <div class="col-sm-6">
         <div class="card">
